# HomeAI

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  context_memory.py  gradio_tbh_canvas.py  homeai_app.py  pyproject.toml
docs/: architecture_overview.md  best_practices_review.md  home_ai_forms_spoons_check_ins_plan_for_codex.md  install_linux.md  install_macos.md  install_windows.md  memory_embedding_plan.md  postgresql_setup.md  review.md
homeai/: __init__.py  config.py  embeddings.py  filesystem.py  model_engine.py  pgvector_store.py  tool_utils.py  ui_utils.py
migrations/: 001_create_vector_store.sql
scripts/: bootstrap_postgres.py  bootstrap_postgres.sh
tests/: test_bootstrap_postgres_script.py  test_context_memory.py  test_embeddings.py  test_files_tools.py  test_filesystem.py  test_homeai_app.py  test_model_engine.py  test_pg_memory_repo.py  test_pgvector_store.py
