[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeai"
version = "0.1.0"
description = "Local-first chat assistant canvas using Gradio and PostgreSQL."
requires-python = ">=3.10"
dependencies = [
    "gradio",
    "requests",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest>=8.0",
]
postgres = [
    "psycopg[binary]",
    "psycopg_pool",
]

[tool.setuptools]
packages = ["homeai"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["homeai", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["homeai"]
